# cmake-swig

./: .appveyor.yml  .clang-format  .dockerignore  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTORS  Makefile  README.md  appveyor.yml
.github/workflows/: amd64_docker.yml  amd64_linux_cpp.yml  amd64_linux_dotnet.yml  amd64_linux_java.yml  amd64_linux_python.yml  amd64_macos_cpp.yml  amd64_macos_dotnet.yml  amd64_macos_java.yml  amd64_macos_python.yml  amd64_windows_cpp.yml  amd64_windows_dotnet.yml  amd64_windows_java.yml  amd64_windows_python.yml  arm64_macos_cpp.yml  arm64_macos_dotnet.yml  arm64_macos_java.yml  arm64_macos_python.yml  cpp.yml  docker.yml  linux_cpp.yml  linux_dotnet.yml  linux_java.yml  linux_python.yml  osx_cpp.yml  osx_dotnet.yml  osx_java.yml  osx_python.yml  win_cpp.yml  win_dotnet.yml  win_java.yml  win_python.yml
.travis/: install.sh  script.sh
Bar/: CMakeLists.txt
Bar/dotnet/: CMakeLists.txt  bar.i
Bar/include/bar/: Bar.hpp
Bar/java/: CMakeLists.txt  bar.i
Bar/python/: CMakeLists.txt  bar.i
Bar/src/: Bar.cpp
Bar/test/: CMakeLists.txt
Bar/test/src/: Bar_UT.cpp  main.cpp
Bar/tests/: bar_test.cpp
Foo/: CMakeLists.txt
Foo/dotnet/: CMakeLists.txt  foo.i
Foo/include/foo/: Foo.hpp
Foo/java/: CMakeLists.txt  foo.i
Foo/python/: CMakeLists.txt  foo.i
Foo/src/: Foo.cpp
Foo/test/: CMakeLists.txt
Foo/test/src/: Foo_UT.cpp  main.cpp
Foo/tests/: foo_test.cpp
FooBar/: CMakeLists.txt
FooBar/dotnet/: CMakeLists.txt  foobar.i
FooBar/include/foobar/: FooBar.hpp
FooBar/java/: CMakeLists.txt  foobar.i
FooBar/python/: CMakeLists.txt  foobar.i
FooBar/src/: FooBar.cpp  main.cpp
FooBar/test/: CMakeLists.txt
FooBar/test/src/: FooBar_UT.cpp  main.cpp
FooBar/tests/: CMakeLists.txt  foobar_test.cpp
FooBarApp/: CMakeLists.txt
FooBarApp/src/: main.cpp
ci/: Makefile  README.md  build_manylinux.sh
ci/doc/: deps.dot
ci/docker/almalinux/: cpp.Dockerfile  dotnet.Dockerfile  java.Dockerfile  python.Dockerfile
ci/docker/alpine/: Dockerfile  InstallDockerfile  cpp.Dockerfile  dotnet.Dockerfile  java.Dockerfile  python.Dockerfile
ci/docker/archlinux/: Dockerfile  cpp.Dockerfile  dotnet.Dockerfile  java.Dockerfile  python.Dockerfile
ci/docker/centos/: Dockerfile  cpp.Dockerfile  dotnet.Dockerfile  java.Dockerfile  python.Dockerfile
ci/docker/debian/: Dockerfile  cpp.Dockerfile  dotnet.Dockerfile  java.Dockerfile  python.Dockerfile
ci/docker/debian-9/: Dockerfile  python.Dockerfile
ci/docker/fedora/: Dockerfile  cpp.Dockerfile  dotnet.Dockerfile  java.Dockerfile  python.Dockerfile
ci/docker/manylinux/: Dockerfile
ci/docker/opensuse/: Dockerfile  cpp.Dockerfile  dotnet.Dockerfile  java.Dockerfile  python.Dockerfile
ci/docker/rockylinux/: Dockerfile  cpp.Dockerfile  dotnet.Dockerfile  java.Dockerfile  python.Dockerfile
ci/docker/ubuntu/: Dockerfile  cpp.Dockerfile  dotnet.Dockerfile  install.Dockerfile  java.Dockerfile  python.Dockerfile
ci/docker/ubuntu-14.04/: Dockerfile  cc.Dockerfile  dotnet.Dockerfile
ci/docker/ubuntu-16.04/: dotnet.Dockerfile
ci/docker/ubuntu-18.04/: cc.Dockerfile  python.Dockerfile
ci/samples/cpp/: CMakeLists.txt  main.cpp
ci/samples/dotnet/: Mizux.Sample.csproj  Sample.cs
ci/samples/java/: pom.xml
ci/samples/java/src/main/java/net/mizux/cmakeswig/: App.java
ci/samples/java/src/test/java/net/mizux/cmakeswig/: AppTest.java
ci/samples/python/: sample.py
cmake/: CMakeLists.txt.swig  CMakeSwigConfig.cmake.in  Makefile  cpp.cmake  dotnet.cmake  java.cmake  python.cmake  swig.cmake  test.py  util.cmake
cmake/sample/: CMakeLists.txt  main.cpp
doc/: cpp.md  dotnet.md  java.md  python.md  swig.md
docker/alpine/: Dockerfile
docker/centos-7/: Dockerfile  cc.Dockerfile  dotnet.Dockerfile  java.Dockerfile  python.Dockerfile
docker/debian-9/: cc.Dockerfile  dotnet.Dockerfile
docker/manylinux/: Dockerfile  build_manylinux.sh
docker/ubuntu-14.04/: java.Dockerfile  python.Dockerfile
docker/ubuntu-16.04/: Dockerfile  cc.Dockerfile  java.Dockerfile  python.Dockerfile
docker/ubuntu-18.04/: Dockerfile  dotnet.Dockerfile  java.Dockerfile
docker/ubuntu-latest/: Dockerfile  cc.Dockerfile  dotnet.Dockerfile  java.Dockerfile  python.Dockerfile
docs/: cpp.md  dotnet.md  java.md  python.md
dotnet/: Directory.Build.props  Directory.Build.props.in  Example.csproj.in  FooBarTests.cs  Mizux.CMakeSwig.Tests.csproj.in  Mizux.CMakeSwig.csproj.in  Mizux.CMakeSwig.runtime.csproj.in  Test.csproj.in  base.i  runtime.csproj.in
examples/: CMakeLists.txt  Example.cs  Example.java  FooApp.cs  example.cpp  example.py
java/: CMakeSwigTest.java  Loader.java  Test.java  base.i  pom-example.xml.in  pom-full.xml.in  pom-local.xml.in  pom-native.xml.in  pom-test.xml.in  pom.xml.in
python/: setup.py.in  test.py
tests/: BarTest.java  BarTests.cs  CMakeLists.txt  FooBarTest.java  FooBarTests.cs  FooTest.java  FooTests.cs  bar.py  foo.py  foobar.py  test.py
