set_property(SOURCE foo.i PROPERTY CPLUSPLUS ON)
set_property(SOURCE foo.i PROPERTY COMPILE_OPTIONS
  -package ${JAVA_PACKAGE}.foo)
swig_add_library(jniFoo
  TYPE OBJECT
  LANGUAGE java
  OUTPUT_DIR ${JAVA_PROJECT_DIR}/${JAVA_SRC_PATH}/foo
  SOURCES foo.i)

set_target_properties(jniFoo PROPERTIES
  SWIG_INCLUDE_DIRECTORIES ${PROJECT_SOURCE_DIR}/java
  SWIG_USE_TARGET_INCLUDE_DIRECTORIES ON
  POSITION_INDEPENDENT_CODE ON)
target_include_directories(jniFoo PRIVATE ${JNI_INCLUDE_DIRS})
target_link_libraries(jniFoo PRIVATE ${PROJECT_NAMESPACE}::Foo)
